# raft

./: LICENSE
public-tests/: Cargo.toml
public-tests/tests/: basic_raft.rs  client_sessions.rs  cluster_membership_changes.rs  snapshots.rs
solution/: Cargo.toml
solution/src/: candidate.rs  client_manager.rs  cluster.rs  domain.rs  follower.rs  leader.rs  lib.rs  log.rs  server.rs  snapshot.rs  storage.rs  time.rs  util.rs
solution/src/state/: candidate.rs  follower.rs  leader.rs  mod.rs
test-utils/: Cargo.toml  lib.rs
tymo-tests/: Cargo.toml
tymo-tests/tests/: basic_raft.rs  client_sessions.rs  cluster_membership_changes.rs  snapshots.rs
