[package]
name = "assignment-3-public-tests"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

[dev-dependencies]
uuid = { version = "1.2", features = ["v4", "serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = {version = "1.23", features = ["full"] }
async-channel = "1.8"
log = "0.4"
rand = "0.8"
ntest = "0.9"
executor = { path = "../../la1/solution", package = "assignment-1-solution" }
assignment-3-solution = { path = "../solution" }
assignment-3-test-utils = { path = "../test-utils" }
