[package]
name = "assignment-3-solution"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2", features = ["v4", "serde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.23", features = ["full"] }
async-channel = "1.8"
log = "0.4"
rand = "0.8"
base64 = "0.20"
sha2 = "0.10"
executor = { path = "../../module-system/solution", package = "assignment-1-solution" }

[lib]
name = "assignment_3_solution"
path = "src/lib.rs"
